// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImprovementTrackingSection > renders correctly 1`] = `
<v-col-stub
  class="pa-0"
  cols="false"
  data-v-0500f6c0=""
  lg="false"
  md="false"
  sm="false"
  tag="div"
  xl="false"
  xxl="false"
>
  <v-row-stub
    class="tracking-data-description justify-center align-center"
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <div
      class="text-center"
      data-v-0500f6c0=""
    >
      <div
        class="text-headline-small font-weight-medium"
        data-v-0500f6c0=""
      >
        Tracking data
      </div>
      <div
        class="text-body-medium text-medium-emphasis font-weight-regular"
        data-v-0500f6c0=""
      >
        Select data to be tracked during improvement project
      </div>
    </div>
  </v-row-stub>
  <v-row-stub
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      cols="12"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="fill-height align-center"
        data-v-0500f6c0=""
        dense="false"
        density="default"
        id="production-event-description"
        nogutters="false"
        tag="div"
      >
        <div
          class="pb-4 pl-3"
          data-v-0500f6c0=""
        >
          <div
            class="text-body-small text-medium-emphasis"
            data-v-0500f6c0=""
          >
            Production event
          </div>
          <div
            class="text-body-large text-high-emphasis d-flex"
            data-v-0500f6c0=""
          >
            Downtime
          </div>
        </div>
      </v-row-stub>
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="factories-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint="Factory"
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Factory"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="6"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <generic-station-input-stub
        data-v-0500f6c0=""
        disabled="true"
        items=""
        modelvalue=""
        required=""
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="comments-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Stop reasons"
        inverted="false"
        isgroupedselect="true"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items=""
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Stop reasons"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="12"
      data-v-0500f6c0=""
      id="positions-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Machine locations (optional)"
        inverted="false"
        isgroupedselect="false"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Machine locations"
        prependtext=""
        removenonexistentselections="false"
        required="false"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="products-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <advanced-selection-input-stub
        configuration="[object Object]"
        data-v-0500f6c0=""
        disabled="true"
        filterby="[object Object]"
        hint="products"
        is-grouped-select=""
        limit="300"
        modelvalue=""
        period=""
        placeholder="products"
        selectallasempty="false"
        show-empty-array-as-all-selected=""
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2 my-4 d-flex align-center"
      cols="12"
      data-v-0500f6c0=""
      id="new-products-checkbox"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <evocon-v-checkbox-stub
        class="mt-n5 new-products-checkbox"
        dark="false"
        data-v-0500f6c0=""
        disabled="false"
        label="Include new products"
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <icon-with-tooltip-stub
        additionalclasses="ml-4 mt-n5"
        color=""
        data-v-0500f6c0=""
        icon="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Include in tracking data all new products added during the project."
      />
    </v-col-stub>
    <!--v-if-->
  </v-row-stub>
</v-col-stub>
`;

exports[`ImprovementTrackingSection > renders correctly if period average is 0 1`] = `
<v-col-stub
  class="pa-0"
  cols="false"
  data-v-0500f6c0=""
  lg="false"
  md="false"
  sm="false"
  tag="div"
  xl="false"
  xxl="false"
>
  <v-row-stub
    class="tracking-data-description justify-center align-center"
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <div
      class="text-center"
      data-v-0500f6c0=""
    >
      <div
        class="text-headline-small font-weight-medium"
        data-v-0500f6c0=""
      >
        Tracking data
      </div>
      <div
        class="text-body-medium text-medium-emphasis font-weight-regular"
        data-v-0500f6c0=""
      >
        Select data to be tracked during improvement project
      </div>
    </div>
  </v-row-stub>
  <v-row-stub
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      cols="12"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="fill-height align-center"
        data-v-0500f6c0=""
        dense="false"
        density="default"
        id="production-event-description"
        nogutters="false"
        tag="div"
      >
        <div
          class="pb-4 pl-3"
          data-v-0500f6c0=""
        >
          <div
            class="text-body-small text-medium-emphasis"
            data-v-0500f6c0=""
          >
            Production event
          </div>
          <div
            class="text-body-large text-high-emphasis d-flex"
            data-v-0500f6c0=""
          >
            Downtime
          </div>
        </div>
      </v-row-stub>
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="factories-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint="Factory"
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Factory"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="6"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <generic-station-input-stub
        data-v-0500f6c0=""
        disabled="true"
        items=""
        modelvalue=""
        required=""
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="comments-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Stop reasons"
        inverted="false"
        isgroupedselect="true"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items=""
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Stop reasons"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="12"
      data-v-0500f6c0=""
      id="positions-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Machine locations (optional)"
        inverted="false"
        isgroupedselect="false"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Machine locations"
        prependtext=""
        removenonexistentselections="false"
        required="false"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="products-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <advanced-selection-input-stub
        configuration="[object Object]"
        data-v-0500f6c0=""
        disabled="true"
        filterby="[object Object]"
        hint="products"
        is-grouped-select=""
        limit="300"
        modelvalue=""
        period=""
        placeholder="products"
        selectallasempty="false"
        show-empty-array-as-all-selected=""
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2 my-4 d-flex align-center"
      cols="12"
      data-v-0500f6c0=""
      id="new-products-checkbox"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <evocon-v-checkbox-stub
        class="mt-n5 new-products-checkbox"
        dark="false"
        data-v-0500f6c0=""
        disabled="false"
        label="Include new products"
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <icon-with-tooltip-stub
        additionalclasses="ml-4 mt-n5"
        color=""
        data-v-0500f6c0=""
        icon="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Include in tracking data all new products added during the project."
      />
    </v-col-stub>
    <v-col-stub
      class="px-3 pb-2"
      cols="12"
      data-v-0500f6c0=""
      id="baseline-data-alert"
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <div
        data-v-0500f6c0=""
      >
        <v-icon-stub
          class="ml-3"
          color="secondary"
          data-v-0500f6c0=""
          disabled="false"
          end="false"
          size="small"
          start="false"
          tag="i"
        >
          M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16
        </v-icon-stub>
        <span
          class="text-label-small text-uppercase font-weight-medium text-medium-emphasis"
          data-v-0500f6c0=""
        >
          No baseline data available for this selection
        </span>
      </div>
    </v-col-stub>
  </v-row-stub>
</v-col-stub>
`;

exports[`ImprovementTrackingSection > renders correctly with single factory 1`] = `
<v-col-stub
  class="pa-0"
  cols="false"
  data-v-0500f6c0=""
  lg="false"
  md="false"
  sm="false"
  tag="div"
  xl="false"
  xxl="false"
>
  <v-row-stub
    class="tracking-data-description justify-center align-center"
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <div
      class="text-center"
      data-v-0500f6c0=""
    >
      <div
        class="text-headline-small font-weight-medium"
        data-v-0500f6c0=""
      >
        Tracking data
      </div>
      <div
        class="text-body-medium text-medium-emphasis font-weight-regular"
        data-v-0500f6c0=""
      >
        Select data to be tracked during improvement project
      </div>
    </div>
  </v-row-stub>
  <v-row-stub
    data-v-0500f6c0=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      cols="12"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="fill-height align-center"
        data-v-0500f6c0=""
        dense="false"
        density="default"
        id="production-event-description"
        nogutters="false"
        tag="div"
      >
        <div
          class="pb-4 pl-3"
          data-v-0500f6c0=""
        >
          <div
            class="text-body-small text-medium-emphasis"
            data-v-0500f6c0=""
          >
            Production event
          </div>
          <div
            class="text-body-large text-high-emphasis d-flex"
            data-v-0500f6c0=""
          >
            Downtime
          </div>
        </div>
      </v-row-stub>
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="factories-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="false"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="true"
        hint="Factory"
        inverted="false"
        isgroupedselect="false"
        issingleselect="true"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Factory"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="6"
      data-v-0500f6c0=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <generic-station-input-stub
        data-v-0500f6c0=""
        disabled="true"
        items=""
        modelvalue=""
        required=""
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="comments-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Stop reasons"
        inverted="false"
        isgroupedselect="true"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items=""
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Stop reasons"
        prependtext=""
        removenonexistentselections="false"
        required="true"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pb-2 pl-2"
      cols="12"
      data-v-0500f6c0=""
      id="positions-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <selection-input-stub
        checkbox="true"
        coloractiveprepend="false"
        data-v-0500f6c0=""
        disabled="true"
        disabledvalues=""
        emittoggleall="false"
        emptyequalsallselected="false"
        error="false"
        filled="true"
        groupidkey="id"
        groups=""
        groupsorderby="name"
        hiddenitemscount="0"
        hidesearch="false"
        hint="Machine locations (optional)"
        inverted="false"
        isgroupedselect="false"
        issingleselect="false"
        itemflag=""
        itemgroupidkey="groupId"
        items="[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        menuinputtype="primary"
        modelvalue=""
        numericorderby="false"
        placeholder="Machine locations"
        prependtext=""
        removenonexistentselections="false"
        required="false"
        showemptyarrayasallselected="false"
        someselected="false"
        totalcount="0"
        usechips="false"
      />
    </v-col-stub>
    <v-col-stub
      class="pr-2"
      cols="12"
      data-v-0500f6c0=""
      id="products-selection"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <advanced-selection-input-stub
        configuration="[object Object]"
        data-v-0500f6c0=""
        disabled="true"
        filterby="[object Object]"
        hint="products"
        is-grouped-select=""
        limit="300"
        modelvalue=""
        period=""
        placeholder="products"
        selectallasempty="false"
        show-empty-array-as-all-selected=""
      />
    </v-col-stub>
    <v-col-stub
      class="pl-2 my-4 d-flex align-center"
      cols="12"
      data-v-0500f6c0=""
      id="new-products-checkbox"
      lg="false"
      md="6"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <evocon-v-checkbox-stub
        class="mt-n5 new-products-checkbox"
        dark="false"
        data-v-0500f6c0=""
        disabled="false"
        label="Include new products"
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <icon-with-tooltip-stub
        additionalclasses="ml-4 mt-n5"
        color=""
        data-v-0500f6c0=""
        icon="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Include in tracking data all new products added during the project."
      />
    </v-col-stub>
    <!--v-if-->
  </v-row-stub>
</v-col-stub>
`;
